# bkmarzouk.github.io

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  README.md  css.sh  index.html  mkdocs.yml  pyproject.toml  timeline.json
.github/workflows/: pages.yml
background/: index.html
computing/docker/: index.html
computing/python/: index.html
computing/r/: index.html
cosmology/: index.html
docs/: background.md  cosmology.md  index.md  timeline.json
docs/stylesheets/: extra.css  neoteroi-mkdocs.css  neoteroi-timeline.css
docs/timeline/: agreena.md  icr.md  sussex-mphys.md  sussex-phd.md
scripts/: update_timeline.py
search/: search_index.json
site/: 404.html  index.html
site/about/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
timeline/agreena/: index.html
timeline/icr/: index.html
timeline/sussex-mphys/: index.html
timeline/sussex-phd/: index.html
